@@ -1,6 +1,9 @@
 04 Nov 2009 - 2.5.11
 --------------------
 
+ * Do not escape quotes in macro resolution and only escape NUL in setenv
+   values.
+
  * Added a new multipart flag, MULTIPART_INVALID_QUOTING, which will be
    set true if any invalid quoting is found during multipart parsing.
 
